src/test/ui/const-generics/const_evaluatable_checked/simple_fail.min.stderr
error: generic parameters must not be used inside const evaluations
  --> $DIR/simple_fail.rs:7:33
   |
LL | type Arr<const N: usize> = [u8; N - 1];
   |                                 ^ cannot perform const operation using `N`
   |
   = help: const parameters may only be used as standalone arguments `N`

error: aborting due to previous error

